<resources>
    <string name="app_name">Ticket To Ride</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="score_text"><u>Score:</u></string>
    <string name="destination_cards_text"><u>Destination Cards:</u></string>
    <string name="train_cars_text"><u>Train Cars Remaining:</u></string>
    <string name="train_cards_text"><u>Cards:</u></string>
    <string name="destCard">Loading Destination Cards</string>
    <string name="confirmDestCards">Confirm Destination Cards</string>
    <string name="chooseDestCardsTitle">Choose Destination Cards</string>
    <string name="otherPlayer1">Other Player 1</string>
    <string name="otherPlayer2">Other Player 2</string>
    <string name="otherPlayer3">Other Player 3</string>
    <string name="otherPlayer4">Other Player 4</string>
    <string name="otherPlayer5">Other Player 5</string>
    <string name="otherPlayerCards"><u>Cards</u></string>
    <string name="otherPlayerTrainCars"><u>Train Cars</u></string>
    <string name="otherPlayerDestCards"><u>Destination Cards</u></string>
    <string name="otherPlayerScore"><u>Score</u></string>
    <string name="testNumbers">0</string>
    <string name="loading">Loading...</string>
    <string name="playerName">Player Name:</string>
    <string name="score">Score:</string>
    <string name="cartsLeft">Carts Left:</string>
    <string name="longestRoute">Longest Route:</string>
    <string name="pointsFromClaimedRoutes">Points From Claimed Routes:</string>
    <string name="pointsFromUnclaimedRoutes">Unclaimed Points From Routes:</string>
    <string name="loading2">Loading Winner...</string>
    <string name="wins">wins!</string>
    <string name="waiting">Waiting...</string>
    <string name="noOtherPlayers">No Other Players</string>
    <string name="gameFinishedButton">Go To Game List</string>
</resources>
