<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


<TextView
    android:layout_width="match_parent"
    android:id="@+id/otherPlayer1"
    android:layout_height="wrap_content"
    android:text="@string/otherPlayer1"
    android:textColor="@color/colorPrimaryDark"
    android:textSize="32sp" />

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/train_cards_text"
    android:textColor="@color/colorPrimary"
    android:textSize="20sp" />

<GridLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="10dp"
    android:paddingBottom="5dp"
    android:columnCount="3"
    android:rowCount="2">

    <RelativeLayout>
        <ImageView
            android:id="@+id/card_back_train_1"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:layout_marginRight="15dp"
            android:src="@drawable/card_back" />
        <TextView
            android:id="@+id/otherPlayer1Cards"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/card_back_train_1"
            android:layout_alignTop="@id/card_back_train_1"
            android:layout_alignRight="@id/card_back_train_1"
            android:layout_alignBottom="@id/card_back_train_1"
            android:layout_margin="1dp"
            android:gravity="center"
            android:text="12"
            android:textColor="#FFFFFF"
            android:textSize="40dp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout>
        <ImageView
            android:id="@+id/destination_card_back_1"
            android:rotation="90"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:layout_marginRight="15dp"
            android:src="@drawable/dest_card_back" />
        <TextView
            android:id="@+id/otherPlayer1DestCards"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/destination_card_back_1"
            android:layout_alignTop="@id/destination_card_back_1"
            android:layout_alignRight="@id/destination_card_back_1"
            android:layout_alignBottom="@id/destination_card_back_1"
            android:layout_margin="1dp"
            android:gravity="center"
            android:text="12"
            android:textColor="#FFFFFF"
            android:textSize="40dp"
            android:textStyle="bold" />
    </RelativeLayout>

</GridLayout>

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/train_cars_text"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:paddingRight="5dp"
        android:paddingBottom="5dp"/>

    <TextView
        android:id="@+id/otherPlayer1TrainCars"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="000"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp" />

</LinearLayout>

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/score_text"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:paddingRight="5dp"
        android:paddingBottom="5dp"/>

    <TextView
        android:id="@+id/otherPlayer1Score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="000"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp" />

</LinearLayout>





<TextView
    android:id="@+id/otherPlayer2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/otherPlayer2"
    android:textColor="@color/colorPrimaryDark"
    android:textSize="32sp" />

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/train_cards_text"
    android:textColor="@color/colorPrimary"
    android:textSize="20sp" />

<GridLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="10dp"
    android:paddingBottom="5dp"
    android:columnCount="3"
    android:rowCount="2">

    <RelativeLayout>
        <ImageView
            android:id="@+id/card_back_train_2"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:layout_marginRight="15dp"
            android:src="@drawable/card_back" />
        <TextView
            android:id="@+id/otherPlayer2Cards"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/card_back_train_2"
            android:layout_alignTop="@id/card_back_train_2"
            android:layout_alignRight="@id/card_back_train_2"
            android:layout_alignBottom="@id/card_back_train_2"
            android:layout_margin="1dp"
            android:gravity="center"
            android:text="12"
            android:textColor="#FFFFFF"
            android:textSize="40dp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout>
        <ImageView
            android:id="@+id/destination_card_back_2"
            android:rotation="90"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:layout_marginRight="15dp"
            android:src="@drawable/dest_card_back" />
        <TextView
            android:id="@+id/otherPlayer2DestCards"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/destination_card_back_2"
            android:layout_alignTop="@id/destination_card_back_2"
            android:layout_alignRight="@id/destination_card_back_2"
            android:layout_alignBottom="@id/destination_card_back_2"
            android:layout_margin="1dp"
            android:gravity="center"
            android:text="12"
            android:textColor="#FFFFFF"
            android:textSize="40dp"
            android:textStyle="bold" />
    </RelativeLayout>

</GridLayout>

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/train_cars_text"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:paddingRight="5dp"
        android:paddingBottom="5dp"/>

    <TextView
        android:id="@+id/otherPlayer2TrainCars"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="000"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp" />

</LinearLayout>

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/score_text"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:paddingRight="5dp"
        android:paddingBottom="5dp"/>

    <TextView
        android:id="@+id/otherPlayer2Score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="000"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp" />

</LinearLayout>





<TextView
    android:id="@+id/otherPlayer3"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/otherPlayer3"
    android:textColor="@color/colorPrimaryDark"
    android:textSize="32sp" />

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/train_cards_text"
    android:textColor="@color/colorPrimary"
    android:textSize="20sp" />

<GridLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="10dp"
    android:paddingBottom="5dp"
    android:columnCount="3"
    android:rowCount="2">

    <RelativeLayout>
        <ImageView
            android:id="@+id/card_back_train_3"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:layout_marginRight="15dp"
            android:src="@drawable/card_back" />
        <TextView
            android:id="@+id/otherPlayer3Cards"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/card_back_train_3"
            android:layout_alignTop="@id/card_back_train_3"
            android:layout_alignRight="@id/card_back_train_3"
            android:layout_alignBottom="@id/card_back_train_3"
            android:layout_margin="1dp"
            android:gravity="center"
            android:text="12"
            android:textColor="#FFFFFF"
            android:textSize="40dp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout>
        <ImageView
            android:id="@+id/destination_card_back_3"
            android:rotation="90"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:layout_marginRight="15dp"
            android:src="@drawable/dest_card_back" />
        <TextView
            android:id="@+id/otherPlayer3DestCards"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/destination_card_back_3"
            android:layout_alignTop="@id/destination_card_back_3"
            android:layout_alignRight="@id/destination_card_back_3"
            android:layout_alignBottom="@id/destination_card_back_3"
            android:layout_margin="1dp"
            android:gravity="center"
            android:text="12"
            android:textColor="#FFFFFF"
            android:textSize="40dp"
            android:textStyle="bold" />
    </RelativeLayout>

</GridLayout>

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/train_cars_text"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:paddingRight="5dp"
        android:paddingBottom="5dp"/>

    <TextView
        android:id="@+id/otherPlayer3TrainCars"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="000"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp" />

</LinearLayout>

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/score_text"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:paddingRight="5dp"
        android:paddingBottom="5dp"/>

    <TextView
        android:id="@+id/otherPlayer3Score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="000"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp" />

</LinearLayout>





<TextView
    android:id="@+id/otherPlayer4"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/otherPlayer4"
    android:textColor="@color/colorPrimaryDark"
    android:textSize="32sp" />

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/train_cards_text"
    android:textColor="@color/colorPrimary"
    android:textSize="20sp" />

<GridLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="10dp"
    android:paddingBottom="5dp"
    android:columnCount="3"
    android:rowCount="2">

    <RelativeLayout>
        <ImageView
            android:id="@+id/card_back_train_4"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:layout_marginRight="15dp"
            android:src="@drawable/card_back" />
        <TextView
            android:id="@+id/otherPlayer4Cards"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/card_back_train_4"
            android:layout_alignTop="@id/card_back_train_4"
            android:layout_alignRight="@id/card_back_train_4"
            android:layout_alignBottom="@id/card_back_train_4"
            android:layout_margin="1dp"
            android:gravity="center"
            android:text="12"
            android:textColor="#FFFFFF"
            android:textSize="40dp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout>
        <ImageView
            android:id="@+id/destination_card_back_4"
            android:rotation="90"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:layout_marginRight="15dp"
            android:src="@drawable/dest_card_back" />
        <TextView
            android:id="@+id/otherPlayer4DestCards"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/destination_card_back_4"
            android:layout_alignTop="@id/destination_card_back_4"
            android:layout_alignRight="@id/destination_card_back_4"
            android:layout_alignBottom="@id/destination_card_back_4"
            android:layout_margin="1dp"
            android:gravity="center"
            android:text="12"
            android:textColor="#FFFFFF"
            android:textSize="40dp"
            android:textStyle="bold" />
    </RelativeLayout>

</GridLayout>

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/train_cars_text"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:paddingRight="5dp"
        android:paddingBottom="5dp"/>

    <TextView
        android:id="@+id/otherPlayer4TrainCars"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="000"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp" />

</LinearLayout>

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/score_text"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:paddingRight="5dp"
        android:paddingBottom="5dp"/>

    <TextView
        android:id="@+id/otherPlayer4Score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="000"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp" />

</LinearLayout>


</LinearLayout>
</ScrollView>


</LinearLayout>